--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   update-readme:
-    if: "!contains(github.event.head_commit.message, 'Update README')"
+    if: ! contains(github.event.head_commit.message, 'Update README')
     runs-on: ubuntu-latest
 
     steps:
