--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   update-readme:
-    if: ! contains(github.event.head_commit.message, 'Update README')
     runs-on: ubuntu-latest
 
     steps:
@@ -32,6 +31,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Commit changes
+        if: ${{ !contains(github.event.head_commit.message, 'Update README') }}
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
