--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -31,12 +31,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Commit changes
-        if: ${{ !contains(github.event.head_commit.message, 'Update README') }}
+        if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md
-          git commit -m 'Update README' || echo "No changes to commit"
+          git commit -m 'Update README [skip ci]' || echo "No changes to commit"
           git push || echo "Nothing to push"
