--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -29,6 +29,7 @@ jobs:
         run: node update_readme.mjs
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          BOT_UPDATE_TOKEN: ${{ secrets.BOT_UPDATE_TOKEN }}
 
       - name: Commit changes
         if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
